# cal-poc

./: .tool-versions  main.py  package.json  pyproject.toml  tailwind.config.js
templates/: _base.html  index.html
