[tool.poetry]
name = "barry calendar poc"
version = "0.1.0"
description = "A Flask PoC Calendaring because Barry sucks at Elixir"
authors = ["esacteksab <bdmorrison@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = {version = "2.2.3"}
pendulum = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
